fixing spacing

--- a/src/app/about-page/about-page.component.css
+++ b/src/app/about-page/about-page.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     background-color: rgba(243, 234, 234, 0.3);
     border-radius: 25px;
-    margin: 50px;
+    margin: 50px 200px;
     flex-wrap: wrap;
     justify-content: center;
     font-size: 18px;
