--- a/src/app/contact-page/contact-page.component.css
+++ b/src/app/contact-page/contact-page.component.css
@@ -2,7 +2,7 @@
     padding: 0 40px;
     background-color: rgba(243, 234, 234, 0.3);
     border-radius: 25px;
-    margin: 0 50px;
+    margin: 0 200px;
     display: flex;
     justify-content: center;
     flex-flow: column;
