--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     background-color: rgba(243, 234, 234, 0.3);
     border-radius: 25px;
-    margin: 50px;
+    margin: 50px 200px;
 }
 
 .social-media-container {
